// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header opening the Privacy Policy modal 1`] = `
<DocumentFragment>
  <span
    data-component="Modal"
    data-props="{
  \\"isOpen\\": true
}"
  >
    <span
      data-component="PrivacyPolicy"
      data-props="{}"
    />
  </span>
  <header
    class="header"
  >
    <h1>
      <a
        href="/"
      >
        Regexper
      </a>
    </h1>
    <ul
      class="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <span
            data-component="Gitlab"
            data-props="{}"
          />
          <span
            data-component="Trans"
            data-props="{}"
          >
            Source on GitLab
          </span>
        </a>
      </li>
      <li>
        <a
          data-testid="privacy-link"
          href="/privacy"
        >
          <span
            data-component="Trans"
            data-props="{}"
          >
            Privacy Policy
          </span>
        </a>
      </li>
      <li>
        <span
          data-component="InstallPrompt"
          data-props="{}"
        />
      </li>
      <li
        data-requires-js="true"
      >
        <span
          data-component="LocaleSwitcher"
          data-props="{}"
        />
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`Header opening the Privacy Policy modal while holding alt key 1`] = `
<DocumentFragment>
  <span
    data-component="Modal"
    data-props="{
  \\"isOpen\\": false
}"
  >
    <span
      data-component="PrivacyPolicy"
      data-props="{}"
    />
  </span>
  <header
    class="header"
  >
    <h1>
      <a
        href="/"
      >
        Regexper
      </a>
    </h1>
    <ul
      class="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <span
            data-component="Gitlab"
            data-props="{}"
          />
          <span
            data-component="Trans"
            data-props="{}"
          >
            Source on GitLab
          </span>
        </a>
      </li>
      <li>
        <a
          data-testid="privacy-link"
          href="/privacy"
        >
          <span
            data-component="Trans"
            data-props="{}"
          >
            Privacy Policy
          </span>
        </a>
      </li>
      <li>
        <span
          data-component="InstallPrompt"
          data-props="{}"
        />
      </li>
      <li
        data-requires-js="true"
      >
        <span
          data-component="LocaleSwitcher"
          data-props="{}"
        />
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`Header opening the Privacy Policy modal while holding ctrl key 1`] = `
<DocumentFragment>
  <span
    data-component="Modal"
    data-props="{
  \\"isOpen\\": false
}"
  >
    <span
      data-component="PrivacyPolicy"
      data-props="{}"
    />
  </span>
  <header
    class="header"
  >
    <h1>
      <a
        href="/"
      >
        Regexper
      </a>
    </h1>
    <ul
      class="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <span
            data-component="Gitlab"
            data-props="{}"
          />
          <span
            data-component="Trans"
            data-props="{}"
          >
            Source on GitLab
          </span>
        </a>
      </li>
      <li>
        <a
          data-testid="privacy-link"
          href="/privacy"
        >
          <span
            data-component="Trans"
            data-props="{}"
          >
            Privacy Policy
          </span>
        </a>
      </li>
      <li>
        <span
          data-component="InstallPrompt"
          data-props="{}"
        />
      </li>
      <li
        data-requires-js="true"
      >
        <span
          data-component="LocaleSwitcher"
          data-props="{}"
        />
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`Header opening the Privacy Policy modal while holding meta key 1`] = `
<DocumentFragment>
  <span
    data-component="Modal"
    data-props="{
  \\"isOpen\\": false
}"
  >
    <span
      data-component="PrivacyPolicy"
      data-props="{}"
    />
  </span>
  <header
    class="header"
  >
    <h1>
      <a
        href="/"
      >
        Regexper
      </a>
    </h1>
    <ul
      class="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <span
            data-component="Gitlab"
            data-props="{}"
          />
          <span
            data-component="Trans"
            data-props="{}"
          >
            Source on GitLab
          </span>
        </a>
      </li>
      <li>
        <a
          data-testid="privacy-link"
          href="/privacy"
        >
          <span
            data-component="Trans"
            data-props="{}"
          >
            Privacy Policy
          </span>
        </a>
      </li>
      <li>
        <span
          data-component="InstallPrompt"
          data-props="{}"
        />
      </li>
      <li
        data-requires-js="true"
      >
        <span
          data-component="LocaleSwitcher"
          data-props="{}"
        />
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`Header opening the Privacy Policy modal while holding shift key 1`] = `
<DocumentFragment>
  <span
    data-component="Modal"
    data-props="{
  \\"isOpen\\": false
}"
  >
    <span
      data-component="PrivacyPolicy"
      data-props="{}"
    />
  </span>
  <header
    class="header"
  >
    <h1>
      <a
        href="/"
      >
        Regexper
      </a>
    </h1>
    <ul
      class="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <span
            data-component="Gitlab"
            data-props="{}"
          />
          <span
            data-component="Trans"
            data-props="{}"
          >
            Source on GitLab
          </span>
        </a>
      </li>
      <li>
        <a
          data-testid="privacy-link"
          href="/privacy"
        >
          <span
            data-component="Trans"
            data-props="{}"
          >
            Privacy Policy
          </span>
        </a>
      </li>
      <li>
        <span
          data-component="InstallPrompt"
          data-props="{}"
        />
      </li>
      <li
        data-requires-js="true"
      >
        <span
          data-component="LocaleSwitcher"
          data-props="{}"
        />
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`Header rendering 1`] = `
<DocumentFragment>
  <span
    data-component="Modal"
    data-props="{
  \\"isOpen\\": false
}"
  >
    <span
      data-component="PrivacyPolicy"
      data-props="{}"
    />
  </span>
  <header
    class="header"
    data-banner="testing"
  >
    <h1>
      <a
        href="/"
      >
        Regexper
      </a>
    </h1>
    <ul
      class="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <span
            data-component="Gitlab"
            data-props="{}"
          />
          <span
            data-component="Trans"
            data-props="{}"
          >
            Source on GitLab
          </span>
        </a>
      </li>
      <li>
        <a
          data-testid="privacy-link"
          href="/privacy"
        >
          <span
            data-component="Trans"
            data-props="{}"
          >
            Privacy Policy
          </span>
        </a>
      </li>
      <li>
        <span
          data-component="InstallPrompt"
          data-props="{}"
        />
      </li>
      <li
        data-requires-js="true"
      >
        <span
          data-component="LocaleSwitcher"
          data-props="{}"
        />
      </li>
    </ul>
  </header>
</DocumentFragment>
`;

exports[`Header rendering with no banner 1`] = `
<DocumentFragment>
  <span
    data-component="Modal"
    data-props="{
  \\"isOpen\\": false
}"
  >
    <span
      data-component="PrivacyPolicy"
      data-props="{}"
    />
  </span>
  <header
    class="header"
  >
    <h1>
      <a
        href="/"
      >
        Regexper
      </a>
    </h1>
    <ul
      class="list"
    >
      <li>
        <a
          href="https://gitlab.com/javallone/regexper-static"
          rel="external noopener noreferrer"
          target="_blank"
        >
          <span
            data-component="Gitlab"
            data-props="{}"
          />
          <span
            data-component="Trans"
            data-props="{}"
          >
            Source on GitLab
          </span>
        </a>
      </li>
      <li>
        <a
          data-testid="privacy-link"
          href="/privacy"
        >
          <span
            data-component="Trans"
            data-props="{}"
          >
            Privacy Policy
          </span>
        </a>
      </li>
      <li>
        <span
          data-component="InstallPrompt"
          data-props="{}"
        />
      </li>
      <li
        data-requires-js="true"
      >
        <span
          data-component="LocaleSwitcher"
          data-props="{}"
        />
      </li>
    </ul>
  </header>
</DocumentFragment>
`;
